--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="images/igor2.png" alt="Logo do Projeto Final">
+                    <img src="images/logo.png" alt="Logo do Projeto Final">
                 </a>
             </div><!--logo-->
 
@@ -48,7 +48,7 @@
                 <div class= "flex">
                     <div class="txt-topo-site">
                         <h1>OI! EU SOU O IGOR</h1>
-                        <p>Aprendiz do TI na Adama. Espero que meu tempo de trabalho possam ser úteis para o seu projeto.</p>
+                        <p style="font-size: 22px;">Especialista em Cybersecurity, desenvolvimento de websites e backend. Tenho experiência em proteger sistemas digitais, criar sites responsivos e desenvolver soluções robustas em linguagens como Java, Python e C#.</p>
                         <div class="btn-contato">
                             <a href="#">
                                 <button>Entre em Contato</button>
@@ -95,21 +95,80 @@
         <section class="sobre">
             <div class="interface">
                 <div class="flex">
-                    <div class="txt-sobre">
-                        <h2>MUITO PRAZER, <span>SOU IGOR HERNANDES.</span></h2>
-                        <p>nfwefjewfewfejeifewjfnekfjkefrfweifewjfwiefjwfnwfnwefjwefjwnfjwfwnefjnewfnwjnfjnwfwnfjn</p>
-                        <p>3rfwefibwfwefefhehfhebfefefhfefgwbfjwhfwdhbdcdhcbhdjcdbchdjcdhbjbhfcjhdcbdcdbcdhbcbdhcd</p>
+ 
                     <div class="img-sobre">
-                        <img src="images/igor2.png" alt="">
+                        <img src="images/igor2.png" alt="" height="400" width="400">
                     </div><!--img-sobre-->
 
-                    </div><!--txt.sobre-->
-
-                    
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU IGOR HERNANDES.</span></h2>
+                        <p style="font-size: 22px;">Posso ajudar sua empresa a proteger sistemas, redes e dados contra ameaças digitais, criar websites modernos e responsivos que impulsionem a presença online e desenvolver soluções backend robustas e eficientes para atender às necessidades do seu negócio. Meu foco está em entregar segurança, funcionalidade e inovação para alcançar os melhores resultados.</p>
+                        <div class="btn-social">
+                            <a href="#"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="#"><button><i class="bi bi-youtube"></i></button></a>
+                            <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                        </div><!--btn-social-->
+                    </div><!--txt-sobre-->
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--sobre-->
+
+        <section class="portfolio">
+            <div class="interface">
+                <h2 class="titulo">MEU <span>PORTFÓLIO.</span></h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(images/imagem.jpg);">
+                        <div class="overlay">Projeto 1</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(images/imagem.jpg);">
+                        <div class="overlay">Projeto 2</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(images/imagem.jpg);">
+                        <div class="overlay">Projeto 3</div>
+                    </div>
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--portfolio-->
+
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo">CONVERSE <span>COMIGO.</span></h2>
+
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Seu nome completo:" required>
+                    <input type="text" name="" id="" placeholder="Seu e-mail:" required>
+                    <input type="text" name="" id="" placeholder="Seu celular:">
+                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
+                </form>
+            </div><!--interface-->
+        </section><!--formulario-->
+
     </main>
+
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="images/logo.png" alt="Logotipo Agência BRN">
+                    </div><!--logo-footer-->
+                    <div class="btn-social">
+                        <a href="#"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="#"><button><i class="bi bi-youtube"></i></button></a>
+                        <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                    </div><!--btn-social-->
+                </div>
+            </div><!--line-footer-->
+
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-fill"></i> <a href="igorhernandes@edu.unifil.br">igorhernandes@edu.unifil.br</a></p>
+            </div><!--line-footer-->
+        </div><!--interface-->
+    </footer>
+
+</body>
+</html>
     
 </body>
 </html>
